--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>영재♡서이 결혼합니다.</title>
     <meta property="og:title" content="영재♡서이 결혼합니다.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://code.d2.co.kr/kaylee/invitation/images/gallery/01.jpg">
+    <meta property="og:image" content="https://ys-wedding.github.io/images/gallery/01.jpg">
     <meta property="og:image:height" content="600"/>
     <meta property="og:description" content="4월 10일, 일요일 12시30분 더컨벤션 반포">
     <script src="js/jquery-3.1.1.min.js"></script>
