--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta property="og:description" content="4월 10일, 일요일 12시30분 더컨벤션 반포">
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/swiper.min.js"></script>
+    <script src="js/delighters.js"></script>
     <script src="js/ui.js"></script>
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-myeongjo.css" rel="stylesheet">
     <link rel="stylesheet" href="fonts/font.css">
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/common.css">
@@ -23,7 +25,9 @@
     <section class="visual">
         <p class="date">2022 . 04. 10 SUN, PM 12 : 30</p>
         <div class="visual-img">
-            <img src="images/visual.jpg" alt=""/>
+            <div class="img-box">
+                <img src="images/visual.jpg" alt=""/>
+            </div>
             <p class="name">
                 이<br>영<br>재<br> & <br>김<br>서<br>이
             </p>
@@ -42,20 +46,18 @@
         </p>
     </section>
     <section class="profile">
-        <p>이권복 · 전춘숙 <span class="gray">의 장남</span> 영재</p>
-        <p>김대동 · 장혜순 <span class="gray">의 장녀</span> 서이</p>
+        <div data-delighter>
+            <p>이권복 · 전춘숙 <span class="gray">의 장남</span> 영재</p>
+            <p>김대동 · 장혜순 <span class="gray">의 장녀</span> 서이</p>
+        </div>
     </section>
     <section class="gallery">
         <h3 class="title">사진</h3>
-        <p></p>
         <div class="gallery-slider">
-            <div class="gallery-top">
+            <div class="gallery-top" data-delighter>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <img src="images/gallery/01.jpg" alt=""/>
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/gallery/02.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
                         <img src="images/gallery/03.jpg" alt=""/>
@@ -98,16 +100,16 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="images/gallery/16.jpg" alt=""/>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="images/gallery/02.jpg" alt=""/>
                     </div>
                 </div>
             </div>
-            <div class="gallery-thumbs">
+            <div class="gallery-thumbs" data-delighter>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <img src="images/gallery/01.jpg" alt=""/>
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="images/gallery/02.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
                         <img src="images/gallery/03.jpg" alt=""/>
@@ -151,11 +153,16 @@
                     <div class="swiper-slide">
                         <img src="images/gallery/16.jpg" alt=""/>
                     </div>
+                    <div class="swiper-slide">
+                        <img src="images/gallery/02.jpg" alt=""/>
+                    </div>
                 </div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
+
     </section>
-    <section class="calendar">
+    <section class="calendar" data-delighter>
         <h3 class="title">4월</h3>
         <table>
             <thead>
@@ -220,33 +227,36 @@
         </p>
     </section>
     <section class="location">
-        <h3 class="title">오시는 길</h3>
-        <div class="map">
-            <div id="daumRoughmapContainer1646494655770" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-            <script charset="UTF-8" class="daum_roughmap_loader_script"
-                    src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
-            <script charset="UTF-8">
-                new daum.roughmap.Lander({
-                    "timestamp": "1646494655770",
-                    "key": "29ddn",
-                    "mapWidth": "640",
-                    "mapHeight": "210"
-                }).render();
-            </script>
+        <div data-delighter>
+            <h3 class="title">오시는 길</h3>
+            <div class="map">
+                <div id="daumRoughmapContainer1646494655770"
+                     class="root_daum_roughmap root_daum_roughmap_landing"></div>
+                <script charset="UTF-8" class="daum_roughmap_loader_script"
+                        src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+                <script charset="UTF-8">
+                    new daum.roughmap.Lander({
+                        "timestamp": "1646494655770",
+                        "key": "29ddn",
+                        "mapWidth": "640",
+                        "mapHeight": "210"
+                    }).render();
+                </script>
+            </div>
         </div>
         <div class="info">
-            <div class="address">
+            <div class="address" data-delighter>
                 <p>서울특별시 서초구 사평대로 108</p>
                 <p class="focus"><strong>더컨벤션 반포</strong></p>
                 <a href="tel:0262436000">TEL 02 . 6243 . 6000</a>
             </div>
             <div class="line"></div>
             <div class="guide">
-                <dl>
+                <dl data-delighter>
                     <dt>주차장</dt>
                     <dd><strong><span class="up">건물 내 만차 시 외부 주차장 안내</span><br>(도보 10분 거리, 셔틀버스 수시 운행)</strong></dd>
                 </dl>
-                <dl>
+                <dl data-delighter>
                     <dt>지하철</dt>
                     <dd><strong class="up">9호선 신반포역</strong> (셔틀버스 수시 운행)<br>
                         <ul class="list-type">
@@ -261,7 +271,7 @@
                         </ul>
                     </dd>
                 </dl>
-                <dl>
+                <dl data-delighter>
                     <dt>버스</dt>
                     <dd><strong class="up">[마을] 서초 10, 서초 14, 서초 21, [간선] 142</strong><br>
                         반포종합운동장 or 한국회관ROTC중앙회 하차
@@ -271,14 +281,16 @@
         </div>
     </section>
     <section class="contact">
-        <h3 class="title">마음 전하실 곳</h3>
-        <p class="desc">
-            비대면으로 축하를 전하고자
-            하시는 분들을 위해<br>
-            계좌번호를 기재하였습니다.<br>
-            너그러운 마음으로 양해 부탁드립니다.
-        </p>
-        <dl>
+        <div data-delighter>
+            <h3 class="title">마음 전하실 곳</h3>
+            <p class="desc">
+                비대면으로 축하를 전하고자
+                하시는 분들을 위해<br>
+                계좌번호를 기재하였습니다.<br>
+                너그러운 마음으로 양해 부탁드립니다.
+            </p>
+        </div>
+        <dl data-delighter>
             <dt>신랑측</dt>
             <dd>
                 <div class="grid">
@@ -334,7 +346,7 @@
                 </div>
             </dd>
         </dl>
-        <dl>
+        <dl data-delighter>
             <dt>신부측</dt>
             <dd>
                 <div class="grid">
@@ -391,6 +403,10 @@
             </dd>
         </dl>
         <input id="copyTarget" type="text" value="" readonly="">
+        <p class="sub" data-delighter>
+            화환은 정중히 사양합니다.<br>
+            좋은 마음만 감사히 받겠습니다.
+        </p>
     </section>
     <section class="banner">
         <div class="title-wrap">
