--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <section class="visual">
         <p class="date">2022 . 04. 10 SUN, PM 12 : 30</p>
         <div class="visual-img">
-            <div class="img-box">
-                <img src="images/visual.jpg" alt=""/>
+            <div class="bg">
+                <div class="img" style="background-image: url('images/visual.jpg')"></div>
             </div>
             <p class="name">
                 이<br>영<br>재<br> & <br>김<br>서<br>이
