--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <meta property="og:image:height" content="600"/>
     <meta property="og:description" content="4월 10일, 일요일 12시30분 더컨벤션 반포">
     <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/swiper.min.js"></script>
+    <script src="js/jquery-ui.js"></script>
     <script src="js/delighters.js"></script>
+    <script src="js/swiper.min.js"></script>
     <script src="js/ui.js"></script>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-myeongjo.css" rel="stylesheet">
     <link rel="stylesheet" href="fonts/font.css">
@@ -46,7 +47,7 @@
         </p>
     </section>
     <section class="profile">
-        <div data-delighter>
+        <div data-delighter class="eft">
             <p>이권복 · 전춘숙 <span class="gray">의 장남</span> 영재</p>
             <p>김대동 · 장혜순 <span class="gray">의 장녀</span> 서이</p>
         </div>
@@ -54,7 +55,7 @@
     <section class="gallery">
         <h3 class="title">사진</h3>
         <div class="gallery-slider">
-            <div class="gallery-top" data-delighter>
+            <div class="gallery-top eft" data-delighter>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <img src="images/gallery/01.jpg" alt=""/>
@@ -106,7 +107,7 @@
                     </div>
                 </div>
             </div>
-            <div class="gallery-thumbs" data-delighter>
+            <div class="gallery-thumbs">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <img src="images/gallery/01.jpg" alt=""/>
@@ -160,9 +161,8 @@
                 <div class="swiper-pagination"></div>
             </div>
         </div>
-
     </section>
-    <section class="calendar" data-delighter>
+    <section class="calendar eft" data-delighter>
         <h3 class="title">4월</h3>
         <table>
             <thead>
@@ -227,7 +227,7 @@
         </p>
     </section>
     <section class="location">
-        <div data-delighter>
+        <div data-delighter class="eft">
             <h3 class="title">오시는 길</h3>
             <div class="map">
                 <div id="daumRoughmapContainer1646494655770"
@@ -245,18 +245,18 @@
             </div>
         </div>
         <div class="info">
-            <div class="address" data-delighter>
+            <div class="address eft" data-delighter>
                 <p>서울특별시 서초구 사평대로 108</p>
                 <p class="focus"><strong>더컨벤션 반포</strong></p>
                 <a href="tel:0262436000">TEL 02 . 6243 . 6000</a>
             </div>
             <div class="line"></div>
             <div class="guide">
-                <dl data-delighter>
+                <dl data-delighter class="eft">
                     <dt>주차장</dt>
                     <dd><strong><span class="up">건물 내 만차 시 외부 주차장 안내</span><br>(도보 10분 거리, 셔틀버스 수시 운행)</strong></dd>
                 </dl>
-                <dl data-delighter>
+                <dl data-delighter class="eft">
                     <dt>지하철</dt>
                     <dd><strong class="up">9호선 신반포역</strong> (셔틀버스 수시 운행)<br>
                         <ul class="list-type">
@@ -271,7 +271,7 @@
                         </ul>
                     </dd>
                 </dl>
-                <dl data-delighter>
+                <dl data-delighter class="eft">
                     <dt>버스</dt>
                     <dd><strong class="up">[마을] 서초 10, 서초 14, 서초 21, [간선] 142</strong><br>
                         반포종합운동장 or 한국회관ROTC중앙회 하차
@@ -281,7 +281,7 @@
         </div>
     </section>
     <section class="contact">
-        <div data-delighter>
+        <div data-delighter class="eft">
             <h3 class="title">마음 전하실 곳</h3>
             <p class="desc">
                 비대면으로 축하를 전하고자
@@ -290,7 +290,7 @@
                 너그러운 마음으로 양해 부탁드립니다.
             </p>
         </div>
-        <dl data-delighter>
+        <dl data-delighter class="eft">
             <dt>신랑측</dt>
             <dd>
                 <div class="grid">
@@ -346,7 +346,7 @@
                 </div>
             </dd>
         </dl>
-        <dl data-delighter>
+        <dl data-delighter class="eft">
             <dt>신부측</dt>
             <dd>
                 <div class="grid">
@@ -403,7 +403,7 @@
             </dd>
         </dl>
         <input id="copyTarget" type="text" value="" readonly="">
-        <p class="sub" data-delighter>
+        <p class="sub eft" data-delighter>
             화환은 정중히 사양합니다.<br>
             좋은 마음만 감사히 받겠습니다.
         </p>
