--- a/invite/s1.html
+++ b/invite/s1.html
@@ -10,16 +10,16 @@
     <meta property="og:image" content="https://ys-wedding.github.io/images/gallery/01.jpg">
     <meta property="og:image:height" content="600"/>
     <meta property="og:description" content="4월 10일, 일요일 12시30분 더컨벤션 반포">
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/delighters.js"></script>
-    <script src="js/swiper.min.js"></script>
-    <script src="js/ui.js"></script>
+    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="../js/jquery-ui.js"></script>
+    <script src="../js/delighters.js"></script>
+    <script src="../js/swiper.min.js"></script>
+    <script src="../js/ui.js"></script>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-myeongjo.css" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/font.css">
-    <link rel="stylesheet" href="css/swiper.min.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/ui.css">
+    <link rel="stylesheet" href="../fonts/font.css">
+    <link rel="stylesheet" href="../css/swiper.min.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/ui.css">
 
     <script>
         document.documentElement.addEventListener('gesturestart', function (event) {
@@ -33,7 +33,7 @@
         <p class="date">2022 . 04. 10 SUN, PM 12 : 30</p>
         <div class="visual-img">
             <div class="bg">
-                <div class="img" style="background-image: url('images/visual.jpg')"></div>
+                <div class="img" style="background-image: url('../images/gallery/01.jpg')"></div>
             </div>
             <p class="name">
                 이<br>영<br>재<br> & <br>김<br>서<br>이
@@ -73,104 +73,104 @@
             <div class="gallery-top eft" data-delighter>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="images/gallery/01.jpg" alt=""/>
+                        <img src="../images/gallery/02.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/03.jpg" alt=""/>
+                        <img src="../images/gallery/01.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/04.jpg" alt=""/>
+                        <img src="../images/gallery/04.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/05.jpg" alt=""/>
+                        <img src="../images/gallery/05.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/06.jpg" alt=""/>
+                        <img src="../images/gallery/06.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/07.jpg" alt=""/>
+                        <img src="../images/gallery/07.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/08.jpg" alt=""/>
+                        <img src="../images/gallery/08.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/09.jpg" alt=""/>
+                        <img src="../images/gallery/09.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/10.jpg" alt=""/>
+                        <img src="../images/gallery/10.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/11.jpg" alt=""/>
+                        <img src="../images/gallery/11.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/12.jpg" alt=""/>
+                        <img src="../images/gallery/12.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/13.jpg" alt=""/>
+                        <img src="../images/gallery/13.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/14.jpg" alt=""/>
+                        <img src="../images/gallery/14.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/15.jpg" alt=""/>
+                        <img src="../images/gallery/15.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/16.jpg" alt=""/>
+                        <img src="../images/gallery/16.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/02.jpg" alt=""/>
+                        <img src="../images/gallery/03.jpg" alt=""/>
                     </div>
                 </div>
             </div>
             <div class="gallery-thumbs">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="images/gallery/01.jpg" alt=""/>
+                        <img src="../images/gallery/02.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/03.jpg" alt=""/>
+                        <img src="../images/gallery/01.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/04.jpg" alt=""/>
+                        <img src="../images/gallery/04.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/05.jpg" alt=""/>
+                        <img src="../images/gallery/05.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/06.jpg" alt=""/>
+                        <img src="../images/gallery/06.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/07.jpg" alt=""/>
+                        <img src="../images/gallery/07.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/08.jpg" alt=""/>
+                        <img src="../images/gallery/08.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/09.jpg" alt=""/>
+                        <img src="../images/gallery/09.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/10.jpg" alt=""/>
+                        <img src="../images/gallery/10.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/11.jpg" alt=""/>
+                        <img src="../images/gallery/11.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/12.jpg" alt=""/>
+                        <img src="../images/gallery/12.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/13.jpg" alt=""/>
+                        <img src="../images/gallery/13.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/14.jpg" alt=""/>
+                        <img src="../images/gallery/14.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/15.jpg" alt=""/>
+                        <img src="../images/gallery/15.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/16.jpg" alt=""/>
+                        <img src="../images/gallery/16.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/02.jpg" alt=""/>
+                        <img src="../images/gallery/03.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -327,40 +327,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid">
-                    <div class="item">
-                        <div class="left"><span class="tit">아버지</span>이권복</div>
-                        <div class="side">
-                            <a href="tel:01086707377" class="btn-ico"><i class="ico-phone"></i></a>
-                            <a href="sms:01086707377" class="btn-ico"><i class="ico-message"></i></a>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="left">
-                            우리 <span class="copy-text">1002-054-171471</span>
-                        </div>
-                        <div class="side">
-                            <a href="#" class="copy-btn">복사하기</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="grid">
-                    <div class="item">
-                        <div class="left"><span class="tit">어머니</span>전춘숙</div>
-                        <div class="side">
-                            <a href="tel:01087873069" class="btn-ico"><i class="ico-phone"></i></a>
-                            <a href="sms:01087873069" class="btn-ico"><i class="ico-message"></i></a>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="left">
-                            국민 <span class="copy-text">694701-01-137134</span>
-                        </div>
-                        <div class="side">
-                            <a href="#" class="copy-btn">복사하기</a>
-                        </div>
-                    </div>
-                </div>
             </dd>
         </dl>
         <dl data-delighter class="eft">
@@ -383,52 +349,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid">
-                    <div class="item">
-                        <div class="left"><span class="tit">아버지</span>김대동</div>
-                        <div class="side">
-                            <a href="tel:01024560180" class="btn-ico"><i class="ico-phone"></i></a>
-                            <a href="sms:01024560180" class="btn-ico"><i class="ico-message"></i></a>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="left">
-                            농협 <span class="copy-text">415050-52-012954</span>
-                        </div>
-                        <div class="side">
-                            <a href="#" class="copy-btn">복사하기</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="grid">
-                    <div class="item">
-                        <div class="left"><span class="tit">어머니</span>장혜순</div>
-                        <div class="side">
-                            <a href="tel:01066800814" class="btn-ico"><i class="ico-phone"></i></a>
-                            <a href="sms:01066800814" class="btn-ico"><i class="ico-message"></i></a>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="left">
-                            농협 <span class="copy-text">321-12-178777</span>
-                        </div>
-                        <div class="side">
-                            <a href="#" class="copy-btn">복사하기</a>
-                        </div>
-                    </div>
-                </div>
             </dd>
         </dl>
         <input id="copyTarget" type="text" value="" readonly="">
-        <p class="sub eft" data-delighter>
-            화환은 정중히 사양합니다.<br>
-            좋은 마음만 감사히 받겠습니다.
-        </p>
     </section>
     <section class="banner">
         <div class="title-wrap">
             <p class="en">always together</p>
-            <p class="ko">영재 & 서이</p>
         </div>
     </section>
 
