--- a/invite/y.html
+++ b/invite/y.html
@@ -10,30 +10,23 @@
     <meta property="og:image" content="https://ys-wedding.github.io/images/gallery/01.jpg">
     <meta property="og:image:height" content="600"/>
     <meta property="og:description" content="4월 10일, 일요일 12시30분 더컨벤션 반포">
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/delighters.js"></script>
-    <script src="js/swiper.min.js"></script>
-    <script src="js/ui.js"></script>
+    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="../js/swiper.min.js"></script>
+    <script src="../js/delighters.js"></script>
+    <script src="../js/ui.js"></script>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-myeongjo.css" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/font.css">
-    <link rel="stylesheet" href="css/swiper.min.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/ui.css">
-
-    <script>
-        document.documentElement.addEventListener('gesturestart', function (event) {
-            event.preventDefault();
-        }, false);
-    </script>
+    <link rel="stylesheet" href="../fonts/font.css">
+    <link rel="stylesheet" href="../css/swiper.min.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/ui.css">
 </head>
 <body>
 <main id="main">
     <section class="visual">
         <p class="date">2022 . 04. 10 SUN, PM 12 : 30</p>
         <div class="visual-img">
-            <div class="bg">
-                <div class="img" style="background-image: url('images/visual.jpg')"></div>
+            <div class="img-box">
+                <img src="../images/visual.jpg" alt=""/>
             </div>
             <p class="name">
                 이<br>영<br>재<br> & <br>김<br>서<br>이
@@ -44,207 +37,197 @@
         </div>
     </section>
     <section class="intro">
-        <p class="text">
-            서로의 이름을 부르는 것만으로도<br>
-            사랑의 깊이를 확인할 수 있는 두사람이<br>
-            꽃과 나무처럼 걸어와서<br>
-            서로의 모든 것이 되기 위해<br>
-            오랜 기다림 끝에 혼례식을 치르는 날<br>
-            세상은 더욱 아름다워라<br>
-            <br>
-            이해인, ‘사랑의 사람들이여’
-        </p>
         <p>
-            벚꽃 흩날리는 봄 날<br>
-            따스한 바람길 따라 귀한 걸음하시어<br>
-            저희의 시작의 온기를 더해주신다면<br>
+            저희 두 사람이 하나가 되는 뜻깊은 날<br>
+            소중한 분들을 모시고자 합니다.<br>
+            서로를 향한 믿음으로 맺어지는 자리에<br>
+            함께하시어 축복해주시면<br>
             감사한 마음 간직하고 사랑하며 살겠습니다.
         </p>
     </section>
     <section class="profile">
-        <div data-delighter class="eft">
+        <div data-delighter>
             <p>이권복 · 전춘숙 <span class="gray">의 장남</span> 영재</p>
             <p>김대동 · 장혜순 <span class="gray">의 장녀</span> 서이</p>
         </div>
     </section>
     <section class="gallery">
         <h3 class="title">사진</h3>
-        <div class="gallery-slider" data-delighter>
-            <div class="gallery-top eft" data-delighter>
+        <div class="gallery-slider">
+            <div class="gallery-top" data-delighter>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="images/gallery/01.jpg" alt=""/>
+                        <img src="../images/gallery/01.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/03.jpg" alt=""/>
+                        <img src="../images/gallery/03.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/04.jpg" alt=""/>
+                        <img src="../images/gallery/04.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/05.jpg" alt=""/>
+                        <img src="../images/gallery/05.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/06.jpg" alt=""/>
+                        <img src="../images/gallery/06.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/07.jpg" alt=""/>
+                        <img src="../images/gallery/07.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/08.jpg" alt=""/>
+                        <img src="../images/gallery/08.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/09.jpg" alt=""/>
+                        <img src="../images/gallery/09.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/10.jpg" alt=""/>
+                        <img src="../images/gallery/10.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/11.jpg" alt=""/>
+                        <img src="../images/gallery/11.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/12.jpg" alt=""/>
+                        <img src="../images/gallery/12.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/13.jpg" alt=""/>
+                        <img src="../images/gallery/13.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/14.jpg" alt=""/>
+                        <img src="../images/gallery/14.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/15.jpg" alt=""/>
+                        <img src="../images/gallery/15.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/16.jpg" alt=""/>
+                        <img src="../images/gallery/16.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/02.jpg" alt=""/>
+                        <img src="../images/gallery/02.jpg" alt=""/>
                     </div>
                 </div>
             </div>
-            <div class="gallery-thumbs">
+            <div class="gallery-thumbs" data-delighter>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="images/gallery/01.jpg" alt=""/>
+                        <img src="../images/gallery/01.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/03.jpg" alt=""/>
+                        <img src="../images/gallery/03.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/04.jpg" alt=""/>
+                        <img src="../images/gallery/04.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/05.jpg" alt=""/>
+                        <img src="../images/gallery/05.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/06.jpg" alt=""/>
+                        <img src="../images/gallery/06.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/07.jpg" alt=""/>
+                        <img src="../images/gallery/07.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/08.jpg" alt=""/>
+                        <img src="../images/gallery/08.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/09.jpg" alt=""/>
+                        <img src="../images/gallery/09.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/10.jpg" alt=""/>
+                        <img src="../images/gallery/10.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/11.jpg" alt=""/>
+                        <img src="../images/gallery/11.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/12.jpg" alt=""/>
+                        <img src="../images/gallery/12.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/13.jpg" alt=""/>
+                        <img src="../images/gallery/13.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/14.jpg" alt=""/>
+                        <img src="../images/gallery/14.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/15.jpg" alt=""/>
+                        <img src="../images/gallery/15.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/16.jpg" alt=""/>
+                        <img src="../images/gallery/16.jpg" alt=""/>
                     </div>
                     <div class="swiper-slide">
-                        <img src="images/gallery/02.jpg" alt=""/>
+                        <img src="../images/gallery/02.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
         </div>
+
     </section>
-    <section class="calendar">
-        <div class="eft" data-delighter>
-            <h3 class="title">4월</h3>
-            <table>
-                <thead>
-                <th scope="col">Sun</th>
-                <th scope="col">Mon</th>
-                <th scope="col">Tue</th>
-                <th scope="col">Wed</th>
-                <th scope="col">Thu</th>
-                <th scope="col">Fri</th>
-                <th scope="col">Sat</th>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>1</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>6</td>
-                    <td>7</td>
-                    <td>8</td>
-                    <td>9</td>
-                </tr>
-                <tr>
-                    <td class="d-day">10</td>
-                    <td>11</td>
-                    <td>12</td>
-                    <td>13</td>
-                    <td>14</td>
-                    <td>15</td>
-                    <td>16</td>
-                </tr>
-                <tr>
-                    <td>17</td>
-                    <td>18</td>
-                    <td>19</td>
-                    <td>20</td>
-                    <td>21</td>
-                    <td>22</td>
-                    <td>23</td>
-                </tr>
-                <tr>
-                    <td>24</td>
-                    <td>25</td>
-                    <td>26</td>
-                    <td>27</td>
-                    <td>28</td>
-                    <td>29</td>
-                    <td>30</td>
-                </tr>
-                </tbody>
-            </table>
-            <p class="detail">
-                4월 10일 일요일 낮 12시 30분
-            </p>
-        </div>
+    <section class="calendar" data-delighter>
+        <h3 class="title">4월</h3>
+        <table>
+            <thead>
+            <th scope="col">Sun</th>
+            <th scope="col">Mon</th>
+            <th scope="col">Tue</th>
+            <th scope="col">Wed</th>
+            <th scope="col">Thu</th>
+            <th scope="col">Fri</th>
+            <th scope="col">Sat</th>
+            </thead>
+            <tbody>
+            <tr>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>1</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+            </tr>
+            <tr>
+                <td class="d-day">10</td>
+                <td>11</td>
+                <td>12</td>
+                <td>13</td>
+                <td>14</td>
+                <td>15</td>
+                <td>16</td>
+            </tr>
+            <tr>
+                <td>17</td>
+                <td>18</td>
+                <td>19</td>
+                <td>20</td>
+                <td>21</td>
+                <td>22</td>
+                <td>23</td>
+            </tr>
+            <tr>
+                <td>24</td>
+                <td>25</td>
+                <td>26</td>
+                <td>27</td>
+                <td>28</td>
+                <td>29</td>
+                <td>30</td>
+            </tr>
+            </tbody>
+        </table>
+        <p class="detail">
+            4월 10일 일요일 낮 12시 30분
+        </p>
     </section>
     <section class="location">
-        <div data-delighter class="eft">
+        <div data-delighter>
             <h3 class="title">오시는 길</h3>
             <div class="map">
                 <div id="daumRoughmapContainer1646494655770"
@@ -262,18 +245,18 @@
             </div>
         </div>
         <div class="info">
-            <div class="address eft" data-delighter>
+            <div class="address" data-delighter>
                 <p>서울특별시 서초구 사평대로 108</p>
                 <p class="focus"><strong>더컨벤션 반포</strong></p>
                 <a href="tel:0262436000">TEL 02 . 6243 . 6000</a>
             </div>
             <div class="line"></div>
             <div class="guide">
-                <dl data-delighter class="eft">
+                <dl data-delighter>
                     <dt>주차장</dt>
                     <dd><strong><span class="up">건물 내 만차 시 외부 주차장 안내</span><br>(도보 10분 거리, 셔틀버스 수시 운행)</strong></dd>
                 </dl>
-                <dl data-delighter class="eft">
+                <dl data-delighter>
                     <dt>지하철</dt>
                     <dd><strong class="up">9호선 신반포역</strong> (셔틀버스 수시 운행)<br>
                         <ul class="list-type">
@@ -288,7 +271,7 @@
                         </ul>
                     </dd>
                 </dl>
-                <dl data-delighter class="eft">
+                <dl data-delighter>
                     <dt>버스</dt>
                     <dd><strong class="up">[마을] 서초 10, 서초 14, 서초 21, [간선] 142</strong><br>
                         반포종합운동장 or 한국회관ROTC중앙회 하차
@@ -298,7 +281,7 @@
         </div>
     </section>
     <section class="contact">
-        <div data-delighter class="eft">
+        <div data-delighter>
             <h3 class="title">마음 전하실 곳</h3>
             <p class="desc">
                 비대면으로 축하를 전하고자
@@ -307,7 +290,7 @@
                 너그러운 마음으로 양해 부탁드립니다.
             </p>
         </div>
-        <dl data-delighter class="eft">
+        <dl data-delighter>
             <dt>신랑측</dt>
             <dd>
                 <div class="grid">
@@ -363,7 +346,7 @@
                 </div>
             </dd>
         </dl>
-        <dl data-delighter class="eft">
+        <dl data-delighter>
             <dt>신부측</dt>
             <dd>
                 <div class="grid">
@@ -420,7 +403,7 @@
             </dd>
         </dl>
         <input id="copyTarget" type="text" value="" readonly="">
-        <p class="sub eft" data-delighter>
+        <p class="sub" data-delighter>
             화환은 정중히 사양합니다.<br>
             좋은 마음만 감사히 받겠습니다.
         </p>
